<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Notes_Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/notes"
        app:layout_constraintBottom_toBottomOf="@+id/Todo_Button"
        app:layout_constraintEnd_toStartOf="@+id/Reminders_Button"
        app:layout_constraintStart_toEndOf="@+id/Todo_Button" />

    <Button
        android:id="@+id/Todo_Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Reminders_Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/reminders"
        app:layout_constraintBottom_toBottomOf="@+id/Todo_Button"
        app:layout_constraintEnd_toEndOf="parent" />

    <CalendarView
        android:id="@+id/calendarView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fadingEdge="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/app_name"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        app:layout_constraintBottom_toTopOf="@+id/Notes_Button"
        app:layout_constraintEnd_toStartOf="@+id/addEntryButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:text="@string/recent_entries"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView4" />

    <LinearLayout
        android:id="@+id/addPlannerContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/addEntryButton"
        app:layout_constraintEnd_toEndOf="@+id/addEntryButton">

        <TextView
            android:id="@+id/addPlannerText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/planner"
            android:textSize="18sp"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addPlanner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contentDescription="@string/add_planner_button"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:backgroundTint="@color/teal_700"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addHealthContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/addEntryButton"
        app:layout_constraintEnd_toEndOf="@+id/addEntryButton">

        <TextView
            android:id="@+id/addHealthText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/health"
            android:textSize="18sp"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addHealth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contentDescription="@string/add_health_button"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:backgroundTint="@color/teal_700"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addExerciseContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/addEntryButton"
        app:layout_constraintEnd_toEndOf="@+id/addEntryButton">

        <TextView
            android:id="@+id/addExerciseText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/exercise"
            android:textSize="18sp"
            android:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:contentDescription="@string/add_exercise_button"
            android:scaleX="0.8"
            android:scaleY="0.8"
            app:backgroundTint="@color/teal_700"
            app:srcCompat="@android:drawable/ic_input_add" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addEntryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/add_button"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.constraintlayout.widget.ConstraintLayout>