<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">



<TextView
        android:id="@+id/settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:text="@string/settings"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="10dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/settings_textview" />

    <TextView
        android:id="@+id/erase_local_data_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/erase_local_data"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/erase_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/erase"
        app:layout_constraintTop_toBottomOf="@id/erase_local_data_textview"
        app:layout_constraintStart_toStartOf="@id/erase_local_data_textview" />

    <TextView
        android:id="@+id/change_units_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/change_units"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/erase_button"
        app:layout_constraintStart_toStartOf="@id/erase_local_data_textview"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/imperial_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/imperial"
        app:layout_constraintTop_toBottomOf="@id/change_units_textview"
        app:layout_constraintStart_toStartOf="@id/erase_local_data_textview" />

    <Button
        android:id="@+id/metric_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/metric"
        app:layout_constraintTop_toBottomOf="@id/change_units_textview"
        app:layout_constraintStart_toEndOf="@id/imperial_button" />

    <TextView
        android:id="@+id/dark_mode_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/dark_mode"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/imperial_button"
        app:layout_constraintStart_toStartOf="@id/erase_local_data_textview"
        tools:layout_editor_absoluteX="16dp" />

    <Switch
        android:id="@+id/dark_mode_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/erase_local_data_textview"
        app:layout_constraintTop_toBottomOf="@id/dark_mode_textview"
        />

    <TextView
        android:id="@+id/notification_settings_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/notification_settings"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@+id/dark_mode_settings"
        app:layout_constraintStart_toStartOf="@id/erase_local_data_textview"
        tools:layout_editor_absoluteX="16dp" />

    <Switch
        android:id="@+id/notification_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/erase_local_data_textview"
        app:layout_constraintTop_toBottomOf="@id/notification_settings_textview"
        />

    <Button
        android:id="@+id/exit_button"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="8dp"
        android:text="@string/home_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/erase_local_data_textview" />



</androidx.constraintlayout.widget.ConstraintLayout>